Fixed cookie bar breaking out of container

--- a/src/scss/components/_alerts.scss
+++ b/src/scss/components/_alerts.scss
@@ -31,7 +31,7 @@
     border-radius: 0;
     text-align: left;
     min-height: 1rem;
-    position: absolute;
+    position: relative;
 
     & > a {
       color: colour('brand', 'white');
